# smarthome-datamesh

./: .gitignore  Makefile  README.md  dbt.sh  dbt_project.yml  makefile  package-lock.json  package-lock.yml  package.json  packages.yml  profiles.yml  pyproject.toml  requirements.in  requirements.txt  smarthome_dwh.duckdb
.github/workflows/: build.yaml  ci.yaml
evidence/: package-lock.json
evidence/pages/: index.md
metabase/: docker-compose.yml
models/marts/: heatpump_compressor_starts.sql  heatpump_compressor_starts.yml  heatpump_compressor_starts_daily.sql  heatpump_compressor_starts_daily.yml  heatpump_compressor_starts_monthly.sql  heatpump_compressor_starts_monthly.yml  heatpump_compressor_starts_total.sql  heatpump_compressor_starts_total.yml  heatpump_compressor_starts_total_monthly.sql  heatpump_compressor_starts_total_monthly.yml  heatpump_compressor_starts_total_yearly.sql  heatpump_compressor_starts_total_yearly.yml  heatpump_compressor_starts_yearly.sql  heatpump_compressor_starts_yearly.yml  heatpump_compressor_usage.yml  heatpump_flow_rates.sql  heatpump_flow_rates.yml  heatpump_heat_quantities.sql  heatpump_heat_quantities.yml  heatpump_heat_quantities_daily.sql  heatpump_heat_quantities_daily.yml  heatpump_heat_quantities_monthly.sql  heatpump_heat_quantities_monthly.yml  heatpump_heat_quantities_yearly.sql  heatpump_temperatures.sql  (+10 more)
pandas/: meter_heat_quantities.py  novelan_compressor_starts.py
reports/: package-lock.json  package.json
scripts/: dbt.sh  duckdb_ingest.sql  duckdb_load.sql  motherduck_ingest.sql  motherduck_load.sql
(+61 files in other folders)
